# storywriter-studio

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  package-lock.json  package.json
.claude/: hookify.block-route-tree-gen.local.md  hookify.warn-api-error-detail-cast.local.md  hookify.warn-openapi-ts-client-toplevel.local.md  hookify.warn-openapi-ts-format-false.local.md  hookify.warn-sqlalchemy-async-lazy-load.local.md
.forge/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/: HANDOFF.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/lessons/: 04-2026-05-24.md  05-2026-05-28.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-auth-integration/: 01-01-PLAN.md  01-03-PLAN.md  01-DISCUSSION-LOG.md  01-PATTERNS.md
.planning/phases/02-novel-chapter-management/: 02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  02-RESEARCH.md
.planning/phases/03-world-database/: 03-01-PLAN.md  03-CONTEXT.md  03-PATTERNS.md  RESEARCH.md
.planning/phases/04-ai/: 04-01-PLAN.md  04-CONTEXT.md  04-RESEARCH.md
.planning/phases/05-작품-기본정보-api-완성/: 05-01-PLAN.md  05-01-SUMMARY.md  05-CONTEXT.md  05-PATTERNS.md  05-RESEARCH.md
.planning/quick/260517-ncz-app-web-app-api/: 260517-ncz-PLAN.md
.planning/quick/260517-pse-taskfile-yml/: 260517-pse-PLAN.md
.planning/quick/260517-q87-apps-api-docker/: 260517-q87-PLAN.md
.planning/quick/260520-0e1/: 260520-0e1-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/api/: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Justfile  README.md  Taskfile.yml  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_seed_admin_role_and_permission.py  0003_novel_domain.py  0004_merge_0002_and_0003.py  0005_world_domain.py  0006_story_beats.py  0007_novel_tagline_tags.py
apps/api/scripts/: __init__.py  smoke_test.py  wait_for_services.py  wait_for_services.sh
apps/api/src/: __init__.py  __main__.py  main.py
apps/api/src/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  middleware.py  redis.py
apps/api/src/domains/: __init__.py
apps/api/src/domains/auth/: __init__.py  email.py  security.py
apps/api/src/domains/auth/models/: __init__.py  auth_models.py
apps/api/src/domains/auth/oauth/: __init__.py  google.py  kakao.py  naver.py
apps/api/src/domains/auth/repository/: __init__.py  auth_repository.py
apps/api/src/domains/auth/router/: __init__.py  admin_router.py  auth_router.py
apps/api/src/domains/auth/schemas/: __init__.py  admin_schemas.py  auth_schemas.py
apps/api/src/domains/auth/service/: __init__.py  auth_service.py
apps/api/src/domains/chat/: __init__.py  container.py  llm_client.py  llm_factory.py  ports.py
apps/api/src/domains/chat/models/: __init__.py  chat_models.py
apps/api/src/domains/chat/repository/: __init__.py  chat_repository.py
apps/api/src/domains/chat/router/: __init__.py  chat_router.py
apps/api/src/domains/chat/schemas/: __init__.py  chat_schemas.py
apps/api/src/domains/chat/service/: __init__.py  chat_service.py
apps/api/src/domains/novel/: __init__.py
apps/api/src/domains/novel/models/: __init__.py  novel_models.py
apps/api/src/domains/novel/repository/: __init__.py  chapter_repository.py  novel_repository.py
apps/api/src/domains/novel/router/: __init__.py  draft_router.py  novel_router.py  story_beat_router.py
apps/api/src/domains/novel/schemas/: __init__.py  novel_schemas.py
apps/api/src/domains/novel/service/: __init__.py  chapter_service.py  novel_service.py
apps/api/src/domains/shared/: __init__.py  base.py  events.py  types.py
apps/api/src/domains/world/models/: world_models.py
apps/api/src/domains/world/repository/: character_repository.py  location_repository.py  relationship_repository.py  timeline_repository.py  world_setting_repository.py
apps/api/src/domains/world/router/: character_router.py  location_router.py  relationship_router.py  timeline_router.py  world_router.py  world_setting_router.py
apps/api/src/domains/world/schemas/: world_schemas.py
apps/api/src/domains/world/service/: character_service.py  location_service.py  relationship_service.py  timeline_service.py  world_setting_service.py
apps/api/src/infra/: __init__.py
apps/api/src/infra/llm/: __init__.py  provider_factory.py
apps/api/tests/: __init__.py  conftest.py  test_config.py  test_dev_server.py  test_main_runtime.py  test_migrations.py
apps/api/tests/auth/: __init__.py  conftest.py  test_access_token_context.py  test_auth_flows.py  test_email_backend.py  test_login_route.py  test_login_schemas.py  test_password_reset_repository.py  test_password_reset_route.py  test_password_reset_schemas.py  test_refresh_repository.py  test_refresh_route.py  test_refresh_schemas.py  test_signup_mailpit_integration.py  test_signup_password_hashing.py  test_signup_route.py  test_signup_schemas.py  test_verify_email_route.py
apps/api/tests/chat/: __init__.py  _mocks.py  conftest.py  test_api_provider_switching.py  test_di_container.py  test_llm_client.py  test_llm_factory.py  test_ports.py  test_provider_mocks.py  test_provider_routing.py
apps/api/tests/infra/: __init__.py
apps/api/tests/infra/llm/: __init__.py  test_provider_factory.py
apps/api/tests/shared/: __init__.py  test_shared_domain.py
apps/api/tests/unit/novel/: test_chapter_service.py  test_novel_service.py
apps/web/: .gitignore  CLAUDE.md  PRD.md  biome.json  index.html  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
web/: .pnpm-build-policy.json  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
(+260 files in other folders)
