[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "fastapi-bootstrap"
version = "0.1.0"
description = "Production-grade FastAPI backend with auth (JWT+OAuth+RBAC) and LLM chat proxy domains."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.12"
keywords = ["fastapi", "backend", "api", "auth", "jwt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",

    "License :: OSI Approved :: MIT License",

    "Typing :: Typed",
]

dependencies = [
    # ── Web framework ─────────────────────────────────────────────────────
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",      # Form data / file uploads (required by FastAPI)

    # ── Validation / Settings ─────────────────────────────────────────────
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",        # Enables Pydantic's EmailStr type

    # ── Database ──────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",               # Async PostgreSQL driver (SQLAlchemy asyncio)
    "psycopg2-binary>=2.9.9",        # Sync PostgreSQL driver (Alembic migrations)

    # ── Auth / Security ───────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",   # JWT encode/decode (HS256/RS256)
    "passlib[argon2]>=1.7.4",             # Password hashing (argon2 backend)
    "argon2-cffi>=23.1.0",                # Argon2 C extension (production strength)

    # ── Cache / Pub-Sub ───────────────────────────────────────────────────
    "redis[hiredis]>=5.2.0",              # JWT blacklist, rate-limit, oauth state, SSE fanout

    # ── HTTP Client (OAuth flows) ─────────────────────────────────────────
    "httpx>=0.27.0",

    # ── Email ─────────────────────────────────────────────────────────────
    "fastapi-mail>=1.4.2",               # dev=mailpit, prod=SMTP via env

    # ── Observability ─────────────────────────────────────────────────────
    "structlog>=24.4.0",                 # JSON structured logging + correlation_id

    # ── Rate limiting ─────────────────────────────────────────────────────
    "slowapi>=0.1.9",                    # Redis-backed rate limiting (per-user / per-IP)


    # ── Streaming / LLM / Chat domain ─────────────────────────────────────
    "sse-starlette>=2.1.0",              # Server-Sent Events for LLM token streaming
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",            # Core abstractions (Runnable, BaseMessage, etc.)
    "langchain-community>=0.3.0",
    "langchain-litellm>=0.2.0",         # ChatLiteLLM adapter — LLM provider portability
    "litellm>=1.50.0",                  # Provider routing (openai/anthropic/gemini/azure/ollama)
    "tenacity>=8.5.0",                  # Retry logic for transient LLM errors

]

# ---------------------------------------------------------------------------
# Dependency groups (PEP 735 — uv-native, not published to PyPI)
# ---------------------------------------------------------------------------
# Install with: uv sync  (dev is included by default via tool.uv.default-groups)
[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.6.0",              # async test helpers
    "httpx>=0.27.0",             # AsyncClient for TestClient / smoke tests
    "fakeredis>=2.26.0",         # In-memory Redis stub for unit/integration tests
    "ruff>=0.8.0",
    "mypy>=1.13.0",

    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",     # Secret scanning — used by pre-commit + make secrets-baseline

    # Type stubs
    "sqlalchemy[mypy]>=2.0.36",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.0",
]

# ---------------------------------------------------------------------------
# uv settings
# ---------------------------------------------------------------------------
[tool.uv]
# Include the 'dev' dependency-group by default in all uv sync invocations
default-groups = ["dev"]

[tool.uv.sources]
# Pin sources here if you use a private PyPI mirror, e.g.:
# fastapi = { index = "pypi" }

# ---------------------------------------------------------------------------
# Hatchling build (src layout)
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "alembic/",
    "alembic.ini",
    "pyproject.toml",
    "README.md",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (type hints)
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific rules
]
ignore = [
    "ANN401", # dynamic kwargs are used at framework/LLM boundaries
    "S101",   # use of assert (allowed in tests)
    "B008",   # do not perform function calls in defaults (FastAPI DI pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "T20", "S104", "S105", "S106", "B017", "PT011", "N806", "PT018", "E501"]
"alembic/**" = ["ANN", "N999", "E501"]
"scripts/**" = ["T20", "ANN", "S310", "S104", "S603", "S607", "UP036", "E501", "N806"]
"src/core/config.py" = ["S104"]
"src/domains/auth/oauth/*.py" = ["S105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]
explicit_package_bases = true
exclude = ["^src/__init__\\.py$", "^src/__main__\\.py$"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

# Relax some strict rules for prototype iteration
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "fastapi_mail.*",
    "passlib.*",
    "jose.*",
    "alembic.*",
    "redis.*",
    "slowapi.*",

    "langchain.*",
    "langchain_core.*",
    "langchain_community.*",
    "langchain_litellm.*",
    "litellm.*",

]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
markers = [
    "unit: pure unit tests (no I/O)",
    "integration: tests that hit DB / Redis",
    "e2e: end-to-end tests against the running server",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/migrations/*",
    "*/alembic/*",
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
